--- a/EcommerceProject/Views/Shared/_LoginPartial.cshtml
+++ b/EcommerceProject/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,10 @@
 ﻿
+@*
+@using EcommerceProject.Areas.Admin.Models
 @using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUserModel> SignInManager
+@inject UserManager<ApplicationUserModel> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
@@ -26,4 +28,5 @@ else
     </li>
 }
 </ul>
+*@
 
